# AtlasPy

./: .gitignore  main.py  pyproject.toml
.dbx/: project.json
atlas/functions/: __init__.py  functions.py
atlas/keyvault/: __init__.py  secrets.py
atlas/pipeline/: __init__.py  pipeline.py
atlas/synapse/: __init__.py  synapse.py
conf/: deployment.yaml
tests/helpers/: test_functions.py
