[tool.poetry]
name = "Atlas"
version = "0.1.1"
description = "A library of common data engineering functionalities for Atlas and Maia"
authors = ["Shaon Rahman <wizdore@gmail.com>"]
maintainers = ["Shaon Rahman <wizdore@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
